--- a/onlineboutique/src/frontend/templates/product.html
+++ b/onlineboutique/src/frontend/templates/product.html
@@ -49,6 +49,14 @@
               <img src="/static/icons/Hipster_DownArrow.svg" alt="">
             </div>
             <button type="submit" class="cymbal-button-primary">Add To Cart</button>
+          <div class='external-product-wrapper'>
+            <script>
+              shop = $.product.Item.Id.split(":")[0];
+              if (shop!="ONBQ") {
+                document.write("<p>Dispatched from and sold by</p>");
+              }
+            </script>
+          </div>
           </form>
         </div>
       </div>
