feat: Add who is selling item to cart

--- a/onlineboutique/src/frontend/templates/product.html
+++ b/onlineboutique/src/frontend/templates/product.html
@@ -51,7 +51,7 @@
             <button type="submit" class="cymbal-button-primary">Add To Cart</button>
             <div class='external-product-wrapper' style="margin-top: 10px;">
               {{ if ne (index (split $.product.Item.Id ":") 0) "ONBQ" }}
-                <p>Dispatched from and sold by Sock Shop</p>
+                <p>Dispatched from and sold by <b>Sock Shop</b></p>
               {{ end }}
             </div>
           </form>
