--- a/onlineboutique/src/frontend/templates/cart.html
+++ b/onlineboutique/src/frontend/templates/cart.html
@@ -70,6 +70,11 @@
                                 <div class="col">
                                     SKU #{{ .Item.Id }}
                                 </div>
+                                <div class='external-product-wrapper'>
+                                    {{ if ne (index (split $.Item.Id ":") 0) "ONBQ" }}
+                                      <p>Dispatched from and sold by <b>Sock Shop</b></p>
+                                    {{ end }}
+                                  </div>
                             </div>
                             <div class="row">
                                 <div class="col">
