--- a/onlineboutique/src/frontend/templates/product.html
+++ b/onlineboutique/src/frontend/templates/product.html
@@ -50,7 +50,7 @@
             </div>
             <button type="submit" class="cymbal-button-primary">Add To Cart</button>
             <div class='external-product-wrapper'>
-              {{ $idParts := split {{$.product.Item.Id}} ":" }}
+              {{ $idParts := split $.product.Item.Id ":" }}
               {{ if ne (index $idParts 0) "ONBQ" }}
                 <p>Dispatched from and sold by <b>Sock Shop</b></p>
               {{ end }}
