--- a/onlineboutique/src/frontend/templates/product.html
+++ b/onlineboutique/src/frontend/templates/product.html
@@ -52,6 +52,8 @@
             <div class='external-product-wrapper'>
               {{ $idParts := split $.product.Item.Id ":" }}
               {{ if ne (index $idParts 0) "ONBQ" }}
+              <p>{{$idParts}}</p>
+              <p>{{$.product.Item.Id}}</p>
                 <p>Dispatched from and sold by <b>Sock Shop</b></p>
               {{ end }}
             </div>
