--- a/onlineboutique/src/frontend/templates/product.html
+++ b/onlineboutique/src/frontend/templates/product.html
@@ -49,10 +49,8 @@
               <img src="/static/icons/Hipster_DownArrow.svg" alt="">
             </div>
             <button type="submit" class="cymbal-button-primary">Add To Cart</button>
-            <div class='external-product-wrapper'>
+            <div class='external-product-wrapper' style="margin-top: 10px;">
               {{ $idParts := split ":" $.product.Item.Id }}
-              <p>{{$idParts}}</p>
-              <p>{{$.product.Item.Id}}</p>
               {{ if ne (index $idParts 0) "ONBQ" }}
                 <p>Dispatched from and sold by <b>Sock Shop</b></p>
               {{ end }}
