feat: Adding new frontend to order template

--- a/onlineboutique/src/frontend/templates/order.html
+++ b/onlineboutique/src/frontend/templates/order.html
@@ -32,7 +32,46 @@
                     <h3>
                         Your order is complete!
                     </h3>
-                </div>
+                    </div>
+                    {{ range .order.items }}
+                        <div class="row cart-summary-item-row">
+                            <div class="col-md-4 pl-md-0">
+                                <a href="/product/{{.Item.Id}}">
+                                    <img class="img-fluid" alt="" src="{{.Item.Picture}}" />
+                                </a>
+                            </div>
+                            <div class="col-md-8 pr-md-0">
+                                <div class="row">
+                                    <div class="col">
+                                        <h4>{{ .Item.Name }}</h4>
+                                    </div>
+                                </div>
+                                <!--<div class="row cart-summary-item-row-item-id-row">
+                                    <div class="col">
+                                        SKU #{{ .Item.Id }}
+                                    </div>
+                                </div>
+                                <div class='row cart-summary-item-row-item-id-row'>
+                                    <div class="col">
+                                        {{ $idParts := split ":" .Item.Id }}
+                                        {{ if ne (index $idParts 0) "ONBQ" }}
+                                            <p>Dispatched from and sold by <b>Sock Shop</b></p>
+                                        {{ end }}
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col">
+                                        Quantity: {{ .Quantity }}
+                                    </div>
+                                    <div class="col pr-md-0 text-right">
+                                        <strong>
+                                            {{ renderMoney .Price }}
+                                        </strong>
+                                    </div>
+                                </div>-->
+                            </div>
+                        </div>
+                        {{ end }}
                 <div class="col-12 text-center">
                     <p>We've sent you a confirmation email.</p>
                 </div>
