--- a/onlineboutique/src/frontend/templates/order.html
+++ b/onlineboutique/src/frontend/templates/order.html
@@ -31,9 +31,10 @@
                 <div class="col-12 text-center">
                     <h3>
                         Your order is complete!
+                        {{.order.Items}}
                     </h3>
                     </div>
-                    {{ range .order.items }}
+                    <!--{{ range .order.items }}
                         <div class="row cart-summary-item-row">
                             <div class="col-md-4 pl-md-0">
                                 <a href="/product/{{.Item.Id}}">
@@ -46,7 +47,7 @@
                                         <h4>{{ .Item.Name }}</h4>
                                     </div>
                                 </div>
-                                <!--<div class="row cart-summary-item-row-item-id-row">
+                                <div class="row cart-summary-item-row-item-id-row">
                                     <div class="col">
                                         SKU #{{ .Item.Id }}
                                     </div>
@@ -68,10 +69,10 @@
                                             {{ renderMoney .Price }}
                                         </strong>
                                     </div>
-                                </div>-->
+                                </div>
                             </div>
                         </div>
-                        {{ end }}
+                        {{ end }}-->
                 <div class="col-12 text-center">
                     <p>We've sent you a confirmation email.</p>
                 </div>
