--- a/onlineboutique/src/frontend/templates/order.html
+++ b/onlineboutique/src/frontend/templates/order.html
@@ -31,10 +31,9 @@
                 <div class="col-12 text-center">
                     <h3>
                         Your order is complete!
-                        {{.order.Items}}
                     </h3>
                     </div>
-                    <!--{{ range .order.items }}
+                    {{ range .order.Items }}
                         <div class="row cart-summary-item-row">
                             <div class="col-md-4 pl-md-0">
                                 <a href="/product/{{.Item.Id}}">
@@ -44,10 +43,10 @@
                             <div class="col-md-8 pr-md-0">
                                 <div class="row">
                                     <div class="col">
-                                        <h4>{{ .Item.Name }}</h4>
+                                        <h4>{{ .Item.ProductId }}</h4>
                                     </div>
                                 </div>
-                                <div class="row cart-summary-item-row-item-id-row">
+                                <!--<div class="row cart-summary-item-row-item-id-row">
                                     <div class="col">
                                         SKU #{{ .Item.Id }}
                                     </div>
@@ -69,10 +68,10 @@
                                             {{ renderMoney .Price }}
                                         </strong>
                                     </div>
-                                </div>
+                                </div>-->
                             </div>
                         </div>
-                        {{ end }}-->
+                        {{ end }}
                 <div class="col-12 text-center">
                     <p>We've sent you a confirmation email.</p>
                 </div>
