--- a/onlineboutique/src/frontend/templates/order.html
+++ b/onlineboutique/src/frontend/templates/order.html
@@ -34,12 +34,12 @@
                     </h3>
                     </div>
                     {{ range .order.Items }}
-                        <div class="row cart-summary-item-row">
-                            <div class="col-md-4 pl-md-0">
+                        <div class="col-12 text-center">
+                            <!--<div class="col-md-4 pl-md-0">
                                 <a href="/product/{{.Item.Id}}">
                                     <img class="img-fluid" alt="" src="{{.Item.Picture}}" />
                                 </a>
-                            </div>
+                            </div>-->
                             <div class="col-md-8 pr-md-0">
                                 <div class="row">
                                     <div class="col">
