--- a/onlineboutique/src/frontend/templates/order.html
+++ b/onlineboutique/src/frontend/templates/order.html
@@ -34,6 +34,7 @@
                     </h3>
                 <div class="col-12 text-center">
                     <p>We've sent you a confirmation email.</p>
+                    <p>{{.order.Items}}</p>
                 </div>
             </div>
         </div>
@@ -47,7 +48,7 @@
                 <div class="col-12 text-center">
                     <div class="row">
                         <div class="col">
-                            <h4>{{ .Item.ProductId }}</h4>
+                            <h4>{{ .OrderItem.ProductId }}</h4>
                         </div>
                     </div>
                     <!--<div class="row cart-summary-item-row-item-id-row">
