fix: Fix frontend to order template

--- a/onlineboutique/src/frontend/templates/order.html
+++ b/onlineboutique/src/frontend/templates/order.html
@@ -48,7 +48,7 @@
                 <div class="col-12 text-center">
                     <div class="row">
                         <div class="col">
-                            <h4>{{ .OrderItem.ProductId }}</h4>
+                            <h4>{{ .Item.ProductId }}</h4>
                         </div>
                     </div>
                     <!--<div class="row cart-summary-item-row-item-id-row">
