fix: Change pic

--- a/onlineboutique/src/frontend/static/styles/styles.css
+++ b/onlineboutique/src/frontend/static/styles/styles.css
@@ -301,7 +301,7 @@ main {
 }
 
 .home-desktop-left-image {
-  background: url(/static/images/folded-clothes-on-white-chair.jpg) no-repeat center;
+  background: url(/static/images/shoes.jpg) no-repeat center;
   background-size: cover;
 }
 
